17_Supernovae_Regression.ipynb

--- a/17_Supernovae_Regression.ipynb
+++ b/17_Supernovae_Regression.ipynb
@@ -318,8 +318,8 @@
     "plt.grid(True)\n",
     "plt.show()\n",
     "\n",
-    "# UNDERFITTING -> both validation and training errors are high (?) \n",
-    "# OVERFITTING -> training error is low, validation error is high (?)\n",
+    "# UNDERFITTING -> both validation and training errors are high\n",
+    "# OVERFITTING -> training error is low, validation error is high\n",
     "# BEST FIT -> validation error is the minimum, training and validation errors are similar  "
    ]
   }
