17_Supernovae_Regression.ipynb

--- a/17_Supernovae_Regression.ipynb
+++ b/17_Supernovae_Regression.ipynb
@@ -313,7 +313,7 @@
     "plt.plot(test_deg, crossval_err, '--o', label='Validation RMSE', color='red')\n",
     "plt.xlabel('Polynomial Degree')\n",
     "plt.ylabel('RMS Error')\n",
-    "plt.title('Cross-Validation: Training vs Validation Error')\n",
+    "plt.title('Cross-Validation: Training vs Validation Error') # learning curve\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()\n",
