--- a/11_12_Transient_Universe/12_Transient_Universe.ipynb
+++ b/11_12_Transient_Universe/12_Transient_Universe.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LECTURE 12 -> MCMC: NESTED SAMPLING ALGORITHM\n",
+    "# LECTURE 12 -> NESTED SAMPLING ALGORITHM\n",
     "# TRANSIENT UNIVERSE: Transient phenomena include Tidal distruption events, Sudden flares of active galactic nuclei and Supernovae."
    ]
   },
